# allencell-segmenter-ml

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  bumpver_handler.py  depsandlicenses.txt  post_install.py  publish_bumpver_handler.py  pyproject.toml  run.sh  setup.cfg  setup.py  tag_with_current_version.py  tox.ini  version.toml  working_req.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto_add_bug_tickets_to_project.yaml  auto_add_dev_tickets_to_project.yaml  auto_add_feature_request_to_project.yaml  build.yaml  bump_version_pr.yaml  create_publish_pr.yaml  publish.yaml  publish.yml  publish_tag_to_pypi.yaml  publish_to_artifactory.yaml  publish_to_pypi.yaml  tag_hotfix.yaml  test_lint.yaml  test_lint.yml  test_lint_pr.yaml  test_lint_push.yml
docs/: dev.md  models.md  pub-sub-design.md  supported-environments.md  test-guidelines.md
src/allencell_ml_segmenter/: __init__.py  _reader.py  _sample_data.py  _style.py  _widget.py  constants.py  napari.yaml
src/allencell_ml_segmenter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/allencell_ml_segmenter/_tests/: test_reader.py  test_sample_data.py  test_style.py  test_widget.py  test_writer.py
src/allencell_ml_segmenter/_tests/config/: test_user_settings.py
src/allencell_ml_segmenter/_tests/controller/: test_example_controller.py  test_training_controller.py  test_ui_controller.py
src/allencell_ml_segmenter/_tests/core/: directory.py  test_application_manager.py  test_channel_extraction.py  test_dialog_box.py  test_directories.py  test_file_input_model.py  test_progress_tracker.py  test_publisher.py
src/allencell_ml_segmenter/_tests/curation/: test_curation_input_view.py  test_curation_main.py  test_curation_model.py  test_curation_service.py  test_curation_widget.py
src/allencell_ml_segmenter/_tests/fakes/: fake_channel_extraction.py  fake_combo_box.py  fake_event_handler.py  fake_experiments_model.py  fake_image_selection_widget.py  fake_qsettings.py  fake_subscriber.py  fake_training_service.py  fake_user_settings.py  fake_viewer.py
src/allencell_ml_segmenter/_tests/scripts/: pyproject.toml  test_bumpver_handler.py
src/allencell_ml_segmenter/config/: config_service.py  cyto_dl_config.py  fake_user_settings.py  i_user_settings.py  user_config.py  user_settings.py
src/allencell_ml_segmenter/controller/: example_controller.py  im2im_contoller.py  sample_controller.py  training_controller.py  ui_controller.py
src/allencell_ml_segmenter/core/: FileInputModel.py  __init__.py  aics_widget.py  application_manager.py  channel_extraction.py  csv_writer_thread.py  dialog_box.py  directories.py  event.py  extractor_factory.py  file_input_model.py  file_input_widget.py  i_channel_extraction.py  i_extractor_factory.py  info_dialog_box.py  progress_tracker.py  publisher.py  router.py  subscriber.py  view.py  view_manager.py
src/allencell_ml_segmenter/curation/: curation_data_class.py  curation_image_loader.py  curation_model.py  curation_service.py  curation_widget.py  input_view.py  main_view.py  stacked_spinner.py  view.py
src/allencell_ml_segmenter/example_entry_points/: prediction.py  training.py
src/allencell_ml_segmenter/main/: experiments_model.py  i_experiments_model.py  i_viewer.py  main_model.py  main_service.py  main_widget.py  segmenter_layer.py  viewer.py
src/allencell_ml_segmenter/model/: event.py  main_model.py  pub_sub.py  publisher.py  sample_model.py  subscriber.py  test_model.py  training_model.py
src/allencell_ml_segmenter/models/: __init__.py  example_model.py  main_model.py  training_model.py
src/allencell_ml_segmenter/napari/: napari_reader.py  napari_writer.py  sample_data.py
src/allencell_ml_segmenter/postprocess/: postprocess_view.py
src/allencell_ml_segmenter/prediction/: file_input_widget.py  input_button_widget.py  label_with_hint_widget.py  model.py  model_input_widget.py  prediction_folder_event_handler.py  prediction_folder_progress_tracker.py  radio_button_entry_widget.py  radio_button_list_widget.py  service.py  slider_with_labels_widget.py  thresh_beta.py  view.py
src/allencell_ml_segmenter/sample/: README.md  sample_model.py  sample_results_list_widget.py  sample_select_files_widget.py  sample_state_widget.py  sample_view.py
src/allencell_ml_segmenter/scripts/: bumpver_handler.py  publish_bumpver_handler.py
src/allencell_ml_segmenter/services/: cyto_service.py  example_service.py  napari_service.py  prediction_service.py  result_display_service.py  training_service.py
src/allencell_ml_segmenter/styles/: core.qss  curation_main.qss  input_button_widget.qss  main.qss  prediction_view.qss  thresholding_view.qss  training_view.qss
src/allencell_ml_segmenter/thresholding/: thresholding_model.py  thresholding_service.py  thresholding_view.py
src/allencell_ml_segmenter/training/: cache_dir_event_handler.py  experiment_info_widget.py  image_selection_widget.py  metrics_csv_event_handler.py  metrics_csv_progress_tracker.py  model_selection_widget.py  patch_size_validator.py  training_model.py  training_progress_tracker.py  view.py
src/allencell_ml_segmenter/utils/: csv_utils.py  cuda_util.py  cyto_overrides_manager.py  experiment_utils.py  file_utils.py  image_processing.py  image_utils.py  s3_available_models.py  s3_model_downloader.py
src/allencell_ml_segmenter/view/: _main_template.py  exmaple_view.py  main_view_controller.py  main_widget.py  sample_view.py  sample_view_controller.py  sample_widget.py  test_view.py  test_widget.py  training_view.py  training_view_controller.py
src/allencell_ml_segmenter/views/: __init__.py  example_view.py  training_view.py  view.py
src/allencell_ml_segmenter/widgets/: __init__.py  check_box_list_widget.py  custom_file_dialog.py  directory_or_csv_file_dialog.py  example_widget.py  experimentsHomeDialog.py  input_button_widget.py  label_with_hint_widget.py  main_widget.py  model_download_dialog.py  sample_widget.py  selection_widget.py  slider_with_labels_widget.py  training_widget.py
(+116 files in other folders)
