[metadata]
name = allencell-ml-segmenter
version = 0.0.1
description = A plugin to leverage ML segmentation in napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AllenCell/allencell-ml-segmenter
author = brian kim
author_email = brian.kim@alleninstitute.org
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AllenCell/allencell-ml-segmenter/issues
    Documentation = https://github.com/AllenCell/allencell-ml-segmenter#README.md
    Source Code = https://github.com/AllenCell/allencell-ml-segmenter
    User Support = https://github.com/AllenCell/allencell-ml-segmenter/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy

setup_requires =


python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    allencell-ml-segmenter = allencell_ml_segmenter:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
