# package metadata
[metadata]
name = allencell-ml-segmenter
version = 0.0.1
description = A plugin to leverage ML segmentation in napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AllenCell/allencell-ml-segmenter
author = brian kim
author_email = brian.kim@alleninstitute.org
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AllenCell/allencell-ml-segmenter/issues
    Documentation = https://github.com/AllenCell/allencell-ml-segmenter#README.md
    Source Code = https://github.com/AllenCell/allencell-ml-segmenter
    User Support = https://github.com/AllenCell/allencell-ml-segmenter/issues

[options.extras_require]
# project requirements
project =
    numpy
    qtpy
# test requirements
test_lint =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    black
    flake8
# setup requirements
#setup =

# dev requirements
#dev =


[options]
packages = find:
# project dependencies
install_requires = allencell-ml-segmenter[project]
setup_requires = allencell-ml-segmenter[setup]
tests_require = allencell-ml-segmenter[test_lint]
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.entry_points]
napari.manifest =
    allencell-ml-segmenter = allencell_ml_segmenter:napari.yaml

[options.package_data]
* = *.yaml

# configure flake8 to work with black
[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
