[project]
name = "allencell-segmenter-ml"
version = "2.0.0"

# https://pypi.org/project/bumpver
[tool.bumpver]
current_version = "2.0.0"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"
commit          = false
tag             = false # no longer useful to tag here, must happen in create_publish_pr.yaml
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']